Bug #1648858: Fixed table overflowing on small screens on files page
behatnotneeded

--- a/htdocs/theme/raw/sass/features/_filebrowser.scss
+++ b/htdocs/theme/raw/sass/features/_filebrowser.scss
@@ -144,3 +144,7 @@
 .icon-drag:hover {
     cursor: move;
 }
+
+table.filelist .filename {
+    word-break: break-all;
+}
